--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@ You can edit the instructions text. The prompt to try and form an impression of 
 
 */ 
 -->  <h3>A visual guide to the <i>Let's Share</i> task</h3>
-<img src="guide.jpg">
+<img src="guide.jpg"
+width="50"/>
 <br>
 
     <div style="margin-bottom: 100px;">
