img guide resize

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ You can edit the instructions text. The prompt to try and form an impression of 
 */ 
 -->  <h3>A visual guide to the <i>Let's Share</i> task</h3>
 <img src="guide.jpg"
-width="10000000"/>
+style="width:100000px;height:auto;"/>
 <br>
 
     <div style="margin-bottom: 100px;">
