--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@ You can edit the instructions text. The prompt to try and form an impression of 
 
 */ 
 -->  <h3>A visual guide to the <i>Let's Share</i> task</h3>
-<img src="guide.jpg"
-style="width:100px;height:auto;"/>
+<img src="guide.jpg">
 <br>
 
     <div style="margin-bottom: 100px;">
